--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,5 +24,5 @@ Suggests:
 VignetteBuilder: knitr
 Depends: 
     R (>= 3.5)
-URL: https://github.com/W-Mohammed/sickSickerMicrosimPack
+URL: https://github.com/W-Mohammed/sickSickerMicrosimPack, https://w-mohammed.github.io/sickSickerMicrosimPack/
 BugReports: https://github.com/W-Mohammed/sickSickerMicrosimPack/issues
