--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,9 @@ LazyData: true
 LazyDataCompression: xz
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
-Imports: stats
+Imports: 
+    assertthat,
+    stats
 Suggests: 
     DiagrammeR,
     rmarkdown,
