--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://w-mohammed.github.io/sickSickerMicrosimPack/
+url: https://dark-peak-analytics.github.io/sickSickerMicrosimPack/
 template:
   bootstrap: 5
 
